--- a/dbz2.html
+++ b/dbz2.html
@@ -88,27 +88,27 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1lkeALkzkuSGMW_W-Esb_yHsynuEzwTpR/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 9</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1sGkJG3HSxbPyj8i1W-M1btF9cjEvk4LI/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/13M1vumG4DkcmVC-f0zk2wRp80k3AikXz/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 11</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1L11Ly8mNHhEk51afP2yYE3-5QnPTv5O-/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 12</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1KmHZslZDdkR3dVm6OzRo2LXNdij8u3t6/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 13</h4>
 		  <p></p>
 		</div>
@@ -118,17 +118,17 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/11Ry245fSu_7R5Hp1mpmcNygO3PXXnKKP/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 15</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1AocJGqt9KPuA7yubItirwGeDov0MUM-y/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 16</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1ieroi6Tr-wqkv_f0VnCX8c5Q-mcCpZAT/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 17</h4>
 		  <p></p>
 		</div>
@@ -138,12 +138,12 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1nCsj84ZEByO8iFbYt-P86F_R_EIocTJK/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 19</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1lP_PXx17pITJ_b_W-eKEiLkpvP7B9oQi/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 20</h4>
 		  <p></p>
 		</div>
@@ -153,7 +153,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1P62FRHrE3CoPJOBm2061sjY5ALH7LsV9/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 22</h4>
 		  <p></p>
 		</div>
@@ -163,12 +163,12 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1MzXmAJAwmnArcG-3mGtBDQdYwBdNcsK7/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 24</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1Y6DugUPgvn7PAKV3GR2TfaP0tDjnaDm6/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 25</h4>
 		  <p></p>
 		</div>
@@ -178,12 +178,12 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1NtLnil3cSHjyVi4aw5POAU4zepIDDO_V/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 26</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1083i0eNeEQjNMqqsw63MiMSbjfmtNM1w/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 27</h4>
 		  <p></p>
 		</div>
@@ -198,17 +198,17 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/10m5RzGZZN2DxxpzWdjtr2DAyjk99na4r/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 30</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1KkGt0E6zi2JhgYIx_FAqZQJCa74kVbTU/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 31</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1Kcm7BpugcXsy2L3dy2PXihDmmPOPmlA4/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 32</h4>
 		  <p></p>
 		</div>
@@ -218,17 +218,17 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/17E_A2P6FA7jhQjBWLsSJM9hh7L_nRLze/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 33</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1lRGZdx2YxxVehRAMHuPjDt8HX2wLy9sO/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 34</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1cGpmh_mMhGRFQF7peitF72NQTvFFUkLS/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 35</h4>
 		  <p></p>
 		</div>
