--- a/dbz3.html
+++ b/dbz3.html
@@ -58,7 +58,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1ED2nT0ZZAc2_NARq3TKwtQqOAlZ_Ibcy/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 3</h4>
 		  <p></p>
 		</div>
