--- a/dbz3.html
+++ b/dbz3.html
@@ -48,7 +48,7 @@
 	<section>
 	  <h2 >Season 3</h2>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1ohL8Rx6wWHszwtE__6Qc3PxBjwFhncvi/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Episode 1</h4>
 		  <p></p>
 		</div>
