--- a/dbz2.html
+++ b/dbz2.html
@@ -113,7 +113,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1wNjemkjehNmy0B0hi74VhDqcq-Dfza0R/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 14</h4>
 		  <p></p>
 		</div>
@@ -133,7 +133,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1DAzuz7uJBBf1RQg72oO08FL0Qu0Bl3jp/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 18</h4>
 		  <p></p>
 		</div>
