--- a/stage3.html
+++ b/stage3.html
@@ -33,7 +33,7 @@
   </section>
 	  <h2 >Stage 3</h2>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1O6xyEFc-UHvwDAfT9cFPFfbYscrpZYpm/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <p></p>
 		</div>
     </section>
