--- a/stage5.html
+++ b/stage5.html
@@ -31,11 +31,77 @@
   <!-- Home Section -->
   <section class="home" id="home">
   </section>
-	  <h2 >Stage 5</h2>
-		<div class="thumbnail">
+	<h2 >Stage 5</h2>
+	<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 1</h4>
 		  <p></p>
-		</div>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 2</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 3</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 4</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 5</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 6</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 7</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 8</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 9</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 10</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 11</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 12</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 13</h4>
+		  <p></p>
+    </div>
+    <div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 14</h4>
+		  <p></p>
+    </div>
     </section>
 </div>
 </section>
