--- a/spongebobS4.html
+++ b/spongebobS4.html
@@ -13,15 +13,15 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/SpongBob-logo.png" alt="Spongebob Squarepants" width="50%" height="auto"></a>
+	<a><img src="images/SpongeBob-logo.png" alt="Spongebob Squarepants" width="50%" height="auto"></a>
   </span>
   <!-- Navigation -->
   <header>
     <nav>
       <ul>
         <li><a href="spongebobS1.html">Season 1</a></li>
-		<li> <a href="spongebobS2.html">Season 2</a></li>
-		<li> <a href="spongebobS3.html">Season 3</a></li>
+	<li> <a href="spongebobS2.html">Season 2</a></li>
+	<li> <a href="spongebobS3.html">Season 3</a></li>
         <li> <a href="spongebobS4.html">Season 4</a></li>
         <li> <a href="spongebobMovie.html">Movie</a></li>
       </ul>
