--- a/spongebobMovie.html
+++ b/spongebobMovie.html
@@ -13,7 +13,7 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/SpongBob-logo.png" alt="SpongeBob SquarePants" width="25%" height="auto"></a>
+	<a><img src="images/SpongeBob-logo.png" alt="SpongeBob SquarePants" width="25%" height="auto"></a>
   </span>
   <!-- Home Section -->
   <section class="home" id="home">
