--- a/spongebobS2.html
+++ b/spongebobS2.html
@@ -42,7 +42,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1OpPI1QKwHxNVrRsnN4SU_cmJpxC8IenW/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 3</h4>
 		  <p></p>
 		</div>
