--- a/spongebobMovie.html
+++ b/spongebobMovie.html
@@ -15,6 +15,18 @@
   <span class="logo" width="auto" height="auto">
 	<a><img src="images/SpongeBob-logo.png" alt="SpongeBob SquarePants" width="25%" height="auto"></a>
   </span>
+  <!-- Navigation -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="spongebobS1.html">Season 1</a></li>
+	<li> <a href="spongebobS2.html">Season 2</a></li>
+	<li> <a href="spongebobS3.html">Season 3</a></li>
+        <li> <a href="spongebobS4.html">Season 4</a></li>
+        <li> <a href="spongebobMovie.html">Movie</a></li>
+      </ul>
+    </nav>
+  </header>
   <!-- Home Section -->
   <section class="home" id="home">
   </section>
