--- a/spongebobS1.html
+++ b/spongebobS1.html
@@ -37,7 +37,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1UsTzIPQEYG9sv1w0e5yeHdRu2FB9VpqY/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 2</h4>
 		  <p></p>
 		</div>
